# cup-racing-insights

./: .gitignore  DETECTORS.md  README.md  pyproject.toml
cup_racing_insights/: __init__.py  cards.py  cli.py  composites.py  db.py  models.py  parser.py  scoring.py
cup_racing_insights/detectors/: __init__.py  consistency.py  firsts.py  margins.py  peer_rank.py  penalty.py  personal_best.py  splits.py  streak.py  trajectory.py  uniqueness.py  venue.py
cup_racing_insights/render/: __init__.py  infographic.py  season.py  snippet.py
cup_racing_insights/templates/infographics/: all_cards.html.j2  driver_card.html.j2  season_card.html.j2
cup_racing_insights/templates/snippets/: _default.md.j2  best_avg_venue.md.j2  best_season_rank.md.j2  best_venue_weekend.md.j2  best_vs_worst_season.md.j2  career_best_finish.md.j2  career_best_season.md.j2  class_split_podium.md.j2  class_split_ppr.md.j2  clean_career.md.j2  concentrated_fls.md.j2  concentrated_podiums.md.j2  concentrated_poles.md.j2  concentrated_wins.md.j2  consecutive_podium_seasons.md.j2  consecutive_podium_weekends.md.j2  consecutive_season_bests.md.j2  decisive_wcc_year.md.j2  distinct_winning_venues.md.j2  fastest_lap_streak.md.j2  first_fl.md.j2  first_podium.md.j2  first_pole.md.j2  first_to_milestone_podiums.md.j2  first_to_milestone_poles.md.j2  first_to_milestone_wins.md.j2  first_win.md.j2  hat_trick_races.md.j2  highest_single_race_pts.md.j2  largest_win_margin.md.j2  (+47 more)
data/: Cup_Racing_Complete_Data.md
tests/: test_cards_all.py  test_infographic.py  test_parser.py  test_season_card.py  test_splits.py
(+5 files in other folders)
